refactor: 랜덤 정산 코드 변경 - 최소 100원 단위로 정산하도록 변경 - 기존 복잡하던 계산 로직을 단순하게 변경